= Release notes v.8.2

== Table of Contents