@@ -35,4 +35,9 @@ public class CmsConstant {
         public static final String PSU_CORPORATE_ID_TYPE = "psu-corporate-id-type";
         public static final String INSTANCE_ID = "instance-id";
     }
+
+    public static final class QUERY {
+        public static final String PAGE_INDEX = "pageIndex";
+        public static final String ITEMS_PER_PAGE = "itemsPerPage";
+    }
 }
