@@ -66,6 +66,9 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.jpa.domain.Specification;
 
 import java.time.LocalDate;
@@ -81,6 +84,8 @@ import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class CmsPsuAisServiceInternalTest {
+    public static final Integer DEFAULT_PAGE_INDEX = 0;
+    public static final Integer DEFAULT_ITEMS_PER_PAGE = 20;
     private static final String EXTERNAL_CONSENT_ID = "4b112130-6a96-4941-a220-2da8a4af2c65";
     private static final String EXTERNAL_CONSENT_ID_NOT_EXIST = "4b112130-6a96-4941-a220-2da8a4af2c63";
     private static final String AUTHORISATION_ID = "9304a6a0-8f02-4b79-aeab-00aa7e03a06d";
@@ -142,6 +147,7 @@ class CmsPsuAisServiceInternalTest {
 
     private ConsentEntity consentEntity;
     private List<ConsentEntity> consentEntityList;
+    private Page<ConsentEntity> consentEntityPage;
     private CmsAisAccountConsent aisAccountConsent;
     private AuthorisationEntity authorisationEntity;
     private PsuIdData psuIdData;
@@ -161,6 +167,7 @@ class CmsPsuAisServiceInternalTest {
         aisAccountConsent = buildCmsAisAccountConsent();
         authorisationEntity = buildAisConsentAuthorisation();
         consentEntityList = buildAisConsents();
+        consentEntityPage = buildAisConsentsPage();
         authenticationDataHolder = new AuthenticationDataHolder(METHOD_ID, AUTHENTICATION_DATA);
     }
 
@@ -499,8 +506,9 @@ class CmsPsuAisServiceInternalTest {
         when(aisConsentSpecification.byPsuDataInListAndInstanceId(psuIdData, DEFAULT_SERVICE_INSTANCE_ID))
             .thenReturn((root, criteriaQuery, criteriaBuilder) -> null);
         //noinspection unchecked
-        when(consentJpaRepository.findAll(any(Specification.class)))
-            .thenReturn(consentEntityList);
+        PageRequest pageRequest = PageRequest.of(DEFAULT_PAGE_INDEX, DEFAULT_ITEMS_PER_PAGE);
+        when(consentJpaRepository.findAll(any(Specification.class), eq(pageRequest)))
+            .thenReturn(consentEntityPage);
         List<AuthorisationEntity> authorisations = Collections.singletonList(new AuthorisationEntity());
         when(consentAuthorisationService.getAuthorisationsByParentExternalId(EXTERNAL_CONSENT_ID))
             .thenReturn(authorisations);
@@ -510,7 +518,7 @@ class CmsPsuAisServiceInternalTest {
             .thenReturn(consentEntity);
 
         // When
-        List<CmsAisAccountConsent> consentsForPsu = cmsPsuAisService.getConsentsForPsu(psuIdData, DEFAULT_SERVICE_INSTANCE_ID);
+        List<CmsAisAccountConsent> consentsForPsu = cmsPsuAisService.getConsentsForPsu(psuIdData, DEFAULT_SERVICE_INSTANCE_ID, DEFAULT_PAGE_INDEX, DEFAULT_ITEMS_PER_PAGE);
 
         // Then
         assertEquals(consentsForPsu.size(), consentEntityList.size());
@@ -520,8 +528,12 @@ class CmsPsuAisServiceInternalTest {
 
     @Test
     void getConsentsForPsuFail() {
+        // Given
+        PageRequest pageRequest = PageRequest.of(DEFAULT_PAGE_INDEX, DEFAULT_ITEMS_PER_PAGE);
+        when(consentJpaRepository.findAll(null, pageRequest)).thenReturn(Page.empty());
+
         // When
-        List<CmsAisAccountConsent> consentsForPsu = cmsPsuAisService.getConsentsForPsu(psuIdDataWrong, DEFAULT_SERVICE_INSTANCE_ID);
+        List<CmsAisAccountConsent> consentsForPsu = cmsPsuAisService.getConsentsForPsu(psuIdDataWrong, DEFAULT_SERVICE_INSTANCE_ID, DEFAULT_PAGE_INDEX, DEFAULT_ITEMS_PER_PAGE);
 
         // Then
         assertTrue(consentsForPsu.isEmpty());
@@ -533,7 +545,7 @@ class CmsPsuAisServiceInternalTest {
     void getConsentsForPsu_emptyPsuData() {
         // When
         PsuIdData emptyPsuIdData = new PsuIdData();
-        List<CmsAisAccountConsent> consentsForPsu = cmsPsuAisService.getConsentsForPsu(emptyPsuIdData, DEFAULT_SERVICE_INSTANCE_ID);
+        List<CmsAisAccountConsent> consentsForPsu = cmsPsuAisService.getConsentsForPsu(emptyPsuIdData, DEFAULT_SERVICE_INSTANCE_ID, DEFAULT_PAGE_INDEX, DEFAULT_ITEMS_PER_PAGE);
 
         // Then
         assertTrue(consentsForPsu.isEmpty());
@@ -1155,6 +1167,10 @@ class CmsPsuAisServiceInternalTest {
 
     private List<ConsentEntity> buildAisConsents() {
         return Arrays.asList(consentEntity, consentEntity, consentEntity);
+    }
+
+    private Page<ConsentEntity> buildAisConsentsPage() {
+        return new PageImpl(consentEntityList);
     }
 
     private AuthorisationEntity buildAuthorisationEntityWithEmptyPsu(Long psuDataDatabaseId) {
