@@ -18,6 +18,8 @@ package de.adorsys.psd2.consent.psu.api.config;
 
 public class CmsPsuApiDefaultValue {
     public static final String DEFAULT_SERVICE_INSTANCE_ID = "UNDEFINED";
+    public static final String DEFAULT_PAGE_INDEX = "0";
+    public static final String DEFAULT_ITEMS_PER_PAGE = "20";
 
     public CmsPsuApiDefaultValue() {
     }
